docs: complete v2.1 tactical command chain + AI research